// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createWorkflowSkill should create a workflow skill correctly 1`] = `
"---
name: tp-flow-nitpicking-squadron
description: "Hardens existing frontend code by reviewing it, documenting it, and backing it with unit tests. Useful for raising the quality and maintainability of a user interface before it ships."
---

# The Nitpicking Squadron (Frontend code review)

Hardens existing frontend code by reviewing it, documenting it, and backing it with unit tests. Useful for raising the quality and maintainability of a user interface before it ships.

Treat the user's request as the goal of this workflow. Achieve it by running the steps below in order, each one using the skill of its responsible team member.

## Required skills

This workflow relies on the following skills: \`tp-agent-zarra\`, \`tp-agent-fred\`, \`tp-agent-raphael\`, \`tp-agent-cassian\`.
If one of them is not available, stop and tell the user which skill is missing instead of improvising it.

Some steps can also use these replacement skills: \`tp-agent-bastian\`.
They are optional: if a replacement skill is not available, use the step's main skill instead.

## How to run the steps

- Run one step at a time. After each step, stop and wait for the user to validate the result before starting the next one.
- At each step, use the named skill and follow its instructions, including its quality control, to resolve the step's task.
- When a step lists replacements, use the replacement skill instead if its condition matches the context. The replacement resolves the task described by its own skill, not the step's task, based on the same validated steps.
- Tasks may reference parameters written as \`{{parameter}}\`: resolve them as the step's skill describes, inferring them from the context and asking the user only when they cannot be inferred. Once a parameter is resolved, reuse its value at every later step that references it instead of resolving it again.
- At each step, base your work on the user's request and, when the step builds on an earlier one, on that step's validated output.
- At each step, respond only with the step output: no role announcements, no restated task, no meta-commentary about what you are doing.
- At each step, keep in mind the user's request.

## Steps

### Step #1: Zarra (Frontend Code Reviewer)

- **Skill:** \`tp-agent-zarra\`
- **Replace with:** \`tp-agent-bastian\` if the code under review is backend code (APIs, services, data access)
- **Task:** Review the code for readability, maintainability, performance, and bugs, using {{reviewStandard}}. Split mutualizable code into dedicated components with clear, single responsibilities, organized following {{architecturePattern}}. Extract reusable logic into the lowest-level building blocks that respect a pure, stateless presentational/container pattern. Push components as low as possible in the hierarchy: if a component can be made stateless by lifting its state up, move it down to a lower level. Pull complex business logic into reusable contexts, services, or hooks.

### Step #2: Fred (Technical Writer & Code Documenter)

- **Skill:** \`tp-agent-fred\`
- **Builds on:** the validated output of Step #1
- **Task:** Provide meticulously detailed and easily understandable documentation for the {{language}} functions. Provide usage examples for those functions if necessary.

### Step #3: Raphael (Software Unit Tester)

- **Skill:** \`tp-agent-raphael\`
- **Builds on:** the validated output of Step #1
- **Task:** Detect the key functions that should be unit tested and provide the related tests in {{language}} with {{framework}}, structured using {{testPhilosophy}} and prioritizing edge cases over raw coverage percentage.

### Step #4: Cassian (Project Manager)

- **Skill:** \`tp-agent-cassian\`
- **Task:** Inspects all tasks for completion, tracked via a {{framework}}. If any new tasks could be added in order to improve the quality or the completion of the goal, adds those tasks with their associated team members to the ongoing process.
"
`;

exports[`createWorkflowSkill should render a workflow with replacements and default options 1`] = `
"---
name: tp-flow-bug-hunters
description: "Reproduces a reported bug as a failing test, traces it to its root cause, fixes it everywhere it applies, hardens the fix with edge-case tests, and writes a blameless postmortem. Useful for fixing a bug for good instead of patching its symptom."
---

# The Bug Hunters (Bug fixing)

Reproduces a reported bug as a failing test, traces it to its root cause, fixes it everywhere it applies, hardens the fix with edge-case tests, and writes a blameless postmortem. Useful for fixing a bug for good instead of patching its symptom.

Treat the user's request as the goal of this workflow. Achieve it by running the steps below in order, each one using the skill of its responsible team member.

## Required skills

This workflow relies on the following skills: \`tp-agent-remy\`, \`tp-agent-vera\`, \`tp-agent-felix\`, \`tp-agent-raphael\`, \`tp-agent-ingrid\`, \`tp-agent-cassian\`.
If one of them is not available, stop and tell the user which skill is missing instead of improvising it.

Some steps can also use these replacement skills: \`tp-agent-kira\`, \`tp-agent-tessa\`.
They are optional: if a replacement skill is not available, use the step's main skill instead.

## How to run the steps

- Run one step at a time. After each step, stop and wait for the user to validate the result before starting the next one.
- At each step, use the named skill and follow its instructions, including its quality control, to resolve the step's task.
- When a step lists replacements, use the replacement skill instead if its condition matches the context. The replacement resolves the task described by its own skill, not the step's task, based on the same validated steps.
- Tasks may reference parameters written as \`{{parameter}}\`: resolve them as the step's skill describes, inferring them from the context and asking the user only when they cannot be inferred. Once a parameter is resolved, reuse its value at every later step that references it instead of resolving it again.
- At each step, base your work on the user's request and, when the step builds on an earlier one, on that step's validated output.
- At each step, respond only with the step output: no role announcements, no restated task, no meta-commentary about what you are doing.
- At each step, keep in mind the user's request.

## Steps

### Step #1: Remy (Bug Reproduction Engineer)

- **Skill:** \`tp-agent-remy\`
- **Task:** Reproduce the reported bug: narrow it down to the smallest input, state, and environment that trigger it, then capture it as a failing automated test in {{language}} with {{testFramework}}. Document the expected behavior, the actual behavior, and the exact steps to reproduce.

### Step #2: Vera (Root Cause Analyst)

- **Skill:** \`tp-agent-vera\`
- **Builds on:** the validated output of Step #1
- **Task:** Starting from the reproduced bug, trace the execution path to find the root cause using {{analysisMethod}}. Explain the chain of causes from the defect to the observed symptom, identify every other code path affected by the same defect, and recommend where the fix belongs.

### Step #3: Felix (Bug Fix Engineer)

- **Skill:** \`tp-agent-felix\`
- **Replace with:** \`tp-agent-kira\` if the bug is a security vulnerability
- **Replace with:** \`tp-agent-tessa\` if the bug is a performance problem (slowness, timeouts, excessive resource usage)
- **Builds on:** the validated output of Step #2
- **Task:** Fix the bug at its root cause, as identified by the analysis, with the smallest change that makes the reproduction test pass. Apply the same fix to every other affected code path, and preserve existing behavior and public interfaces everywhere else.

### Step #4: Raphael (Software Unit Tester)

- **Skill:** \`tp-agent-raphael\`
- **Builds on:** the validated output of Step #3
- **Task:** Add unit tests for the edge cases surrounding the fix, next to the reproduction test, so that neighboring variants of the bug are caught too.

### Step #5: Ingrid (Infrastructure & Operations Technical Writer)

- **Skill:** \`tp-agent-ingrid\`
- **Builds on:** the validated output of Step #3
- **Task:** Write a blameless postmortem of the bug: its impact, timeline, root cause, the fix, and the follow-up actions that would prevent this class of defect from happening again.

### Step #6: Cassian (Project Manager)

- **Skill:** \`tp-agent-cassian\`
- **Task:** Inspects all tasks for completion, tracked via a {{framework}}. If any new tasks could be added in order to improve the quality or the completion of the goal, adds those tasks with their associated team members to the ongoing process.
"
`;

exports[`createWorkflowSkill should render a workflow with replacements and every option 1`] = `
"---
name: tp-flow-bug-hunters
description: "Reproduces a reported bug as a failing test, traces it to its root cause, fixes it everywhere it applies, hardens the fix with edge-case tests, and writes a blameless postmortem. Useful for fixing a bug for good instead of patching its symptom."
---

# The Bug Hunters (Bug fixing)

Reproduces a reported bug as a failing test, traces it to its root cause, fixes it everywhere it applies, hardens the fix with edge-case tests, and writes a blameless postmortem. Useful for fixing a bug for good instead of patching its symptom.

Treat the user's request as the goal of this workflow. Achieve it by running the steps below in order, each one using the skill of its responsible team member.

## Required skills

This workflow relies on the following skills: \`tp-agent-remy\`, \`tp-agent-vera\`, \`tp-agent-felix\`, \`tp-agent-raphael\`, \`tp-agent-ingrid\`, \`tp-agent-cassian\`.
If one of them is not available, stop and tell the user which skill is missing instead of improvising it.

Some steps can also use these replacement skills: \`tp-agent-kira\`, \`tp-agent-tessa\`.
They are optional: if a replacement skill is not available, use the step's main skill instead.

## How to run the steps

- Run the steps in order without pausing, except after Step #1 and Step #3, where you must stop and wait for the user's validation before continuing to the next step.
- At each step, use the named skill and follow its instructions, including its quality control, to resolve the step's task.
- When a step lists replacements, use the replacement skill instead if its condition matches the context. The replacement resolves the task described by its own skill, not the step's task, based on the same validated steps.
- Tasks may reference parameters written as \`{{parameter}}\`: resolve them as the step's skill describes, inferring them from the context and asking the user only when they cannot be inferred. Once a parameter is resolved, reuse its value at every later step that references it instead of resolving it again.
- At each step, base your work on the user's request and, when the step builds on an earlier one, on that step's validated output.
- At each step, briefly explain your reasoning (2-3 sentences) before the step output. Do not restate the task or announce the skill you are using.
- At each step, if the task is genuinely ambiguous and guessing wrong would be costly, ask a clarifying question instead of proceeding.
- At each step, keep in mind the user's request and the context below.

## Context

Additional context and constraints to respect throughout every step:
The codebase uses Node 22.

## Steps

### Step #1: Remy (Bug Reproduction Engineer)

- **Skill:** \`tp-agent-remy\`
- **Task:** Reproduce the reported bug: narrow it down to the smallest input, state, and environment that trigger it, then capture it as a failing automated test in {{language}} with {{testFramework}}. Document the expected behavior, the actual behavior, and the exact steps to reproduce.

### Step #2: Vera (Root Cause Analyst)

- **Skill:** \`tp-agent-vera\`
- **Builds on:** the validated output of Step #1
- **Task:** Starting from the reproduced bug, trace the execution path to find the root cause using {{analysisMethod}}. Explain the chain of causes from the defect to the observed symptom, identify every other code path affected by the same defect, and recommend where the fix belongs.

### Step #3: Felix (Bug Fix Engineer)

- **Skill:** \`tp-agent-felix\`
- **Replace with:** \`tp-agent-kira\` if the bug is a security vulnerability
- **Replace with:** \`tp-agent-tessa\` if the bug is a performance problem (slowness, timeouts, excessive resource usage)
- **Builds on:** the validated output of Step #2
- **Task:** Fix the bug at its root cause, as identified by the analysis, with the smallest change that makes the reproduction test pass. Apply the same fix to every other affected code path, and preserve existing behavior and public interfaces everywhere else.

### Step #4: Raphael (Software Unit Tester)

- **Skill:** \`tp-agent-raphael\`
- **Builds on:** the validated output of Step #3
- **Task:** Add unit tests for the edge cases surrounding the fix, next to the reproduction test, so that neighboring variants of the bug are caught too.

### Step #5: Ingrid (Infrastructure & Operations Technical Writer)

- **Skill:** \`tp-agent-ingrid\`
- **Builds on:** the validated output of Step #3
- **Task:** Write a blameless postmortem of the bug: its impact, timeline, root cause, the fix, and the follow-up actions that would prevent this class of defect from happening again.

### Step #6: Cassian (Project Manager)

- **Skill:** \`tp-agent-cassian\`
- **Task:** Inspects all tasks for completion, tracked via a {{framework}}. If any new tasks could be added in order to improve the quality or the completion of the goal, adds those tasks with their associated team members to the ongoing process.
"
`;

exports[`createWorkflowSkill should render a workflow with replacements and no pause 1`] = `
"---
name: tp-flow-bug-hunters
description: "Reproduces a reported bug as a failing test, traces it to its root cause, fixes it everywhere it applies, hardens the fix with edge-case tests, and writes a blameless postmortem. Useful for fixing a bug for good instead of patching its symptom."
---

# The Bug Hunters (Bug fixing)

Reproduces a reported bug as a failing test, traces it to its root cause, fixes it everywhere it applies, hardens the fix with edge-case tests, and writes a blameless postmortem. Useful for fixing a bug for good instead of patching its symptom.

Treat the user's request as the goal of this workflow. Achieve it by running the steps below in order, each one using the skill of its responsible team member.

## Required skills

This workflow relies on the following skills: \`tp-agent-remy\`, \`tp-agent-vera\`, \`tp-agent-felix\`, \`tp-agent-raphael\`, \`tp-agent-ingrid\`, \`tp-agent-cassian\`.
If one of them is not available, stop and tell the user which skill is missing instead of improvising it.

Some steps can also use these replacement skills: \`tp-agent-kira\`, \`tp-agent-tessa\`.
They are optional: if a replacement skill is not available, use the step's main skill instead.

## How to run the steps

- Run every step in order, one after another, without pausing for validation between them.
- At each step, use the named skill and follow its instructions, including its quality control, to resolve the step's task.
- When a step lists replacements, use the replacement skill instead if its condition matches the context. The replacement resolves the task described by its own skill, not the step's task, based on the same validated steps.
- Tasks may reference parameters written as \`{{parameter}}\`: resolve them as the step's skill describes, inferring them from the context and asking the user only when they cannot be inferred. Once a parameter is resolved, reuse its value at every later step that references it instead of resolving it again.
- At each step, base your work on the user's request and, when the step builds on an earlier one, on that step's validated output.
- At each step, respond only with the step output: no role announcements, no restated task, no meta-commentary about what you are doing.
- At each step, keep in mind the user's request.

## Steps

### Step #1: Remy (Bug Reproduction Engineer)

- **Skill:** \`tp-agent-remy\`
- **Task:** Reproduce the reported bug: narrow it down to the smallest input, state, and environment that trigger it, then capture it as a failing automated test in {{language}} with {{testFramework}}. Document the expected behavior, the actual behavior, and the exact steps to reproduce.

### Step #2: Vera (Root Cause Analyst)

- **Skill:** \`tp-agent-vera\`
- **Builds on:** the validated output of Step #1
- **Task:** Starting from the reproduced bug, trace the execution path to find the root cause using {{analysisMethod}}. Explain the chain of causes from the defect to the observed symptom, identify every other code path affected by the same defect, and recommend where the fix belongs.

### Step #3: Felix (Bug Fix Engineer)

- **Skill:** \`tp-agent-felix\`
- **Replace with:** \`tp-agent-kira\` if the bug is a security vulnerability
- **Replace with:** \`tp-agent-tessa\` if the bug is a performance problem (slowness, timeouts, excessive resource usage)
- **Builds on:** the validated output of Step #2
- **Task:** Fix the bug at its root cause, as identified by the analysis, with the smallest change that makes the reproduction test pass. Apply the same fix to every other affected code path, and preserve existing behavior and public interfaces everywhere else.

### Step #4: Raphael (Software Unit Tester)

- **Skill:** \`tp-agent-raphael\`
- **Builds on:** the validated output of Step #3
- **Task:** Add unit tests for the edge cases surrounding the fix, next to the reproduction test, so that neighboring variants of the bug are caught too.

### Step #5: Ingrid (Infrastructure & Operations Technical Writer)

- **Skill:** \`tp-agent-ingrid\`
- **Builds on:** the validated output of Step #3
- **Task:** Write a blameless postmortem of the bug: its impact, timeline, root cause, the fix, and the follow-up actions that would prevent this class of defect from happening again.

### Step #6: Cassian (Project Manager)

- **Skill:** \`tp-agent-cassian\`
- **Task:** Inspects all tasks for completion, tracked via a {{framework}}. If any new tasks could be added in order to improve the quality or the completion of the goal, adds those tasks with their associated team members to the ongoing process.
"
`;
